<resources>
    <string name="app_name">CheMaBuLuo_KJF</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="dialog_btn_submit">确定</string>
    <string name="dialog_btn_cancle">取消</string>

    <string name="tv_share">分享</string>
    <string name="tv_share_sina">新浪微博</string>
    <string name="tv_share_qq_f">QQ好友</string>
    <string name="tv_share_qq_q">QQ空间</string>
    <string name="tv_share_wechat_f">微信好友</string>
    <string name="tv_share_wechat_q">微信朋友圈</string>

    <string name="err_net_link">网络未连接,请打开网络后重新操作！</string>

</resources>
