<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:paddingBottom="10sp" >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/line_pop_share_blue"
            android:contentDescription="@null" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15sp"
            android:layout_marginTop="5sp"
            android:text="@string/tv_share"
            android:textColor="#000000"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20sp"
            android:layout_marginRight="20sp"
            android:layout_marginTop="10sp"
            android:orientation="horizontal"
            android:weightSum="3" >

            <LinearLayout
                android:id="@+id/ll_share_wechat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="5sp"
                    android:drawableTop="@drawable/icon_share_micro_letters"
                    android:gravity="center_horizontal"
                    android:text="@string/tv_share_wechat_f"
                    android:textColor="#000000" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_share_sina"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="5sp"
                    android:drawableTop="@drawable/icon_share_weibo"
                    android:gravity="center_horizontal"
                    android:text="@string/tv_share_sina"
                    android:textColor="#000000" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_share_qq"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="5sp"
                    android:drawableTop="@drawable/icon_share_qq"
                    android:gravity="center_horizontal"
                    android:text="@string/tv_share_qq_f"
                    android:textColor="#000000" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20sp"
            android:layout_marginRight="20sp"
            android:layout_marginTop="10sp"
            android:orientation="horizontal"
            android:weightSum="3" >

            <LinearLayout
                android:id="@+id/ll_share_wechat_f"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="5sp"
                    android:drawableTop="@drawable/icon_share_friends"
                    android:gravity="center_horizontal"
                    android:text="@string/tv_share_wechat_q"
                    android:textColor="#000000" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_share_qzone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="5sp"
                    android:drawableTop="@drawable/icon_share_qq_space"
                    android:gravity="center_horizontal"
                    android:text="@string/tv_share_qq_q"
                    android:textColor="#000000" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_share_rr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:visibility="invisible" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="5sp"
                    android:gravity="center_horizontal" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btn_share_cancel"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@android:color/white"
        android:text="@string/dialog_btn_cancle"
        android:textColor="#000000"
        android:textSize="18sp" />

</LinearLayout>